ie8 width-wrap correction

--- a/app-dev/styles/base/base.ie8.css
+++ b/app-dev/styles/base/base.ie8.css
@@ -1,3 +1,8 @@
+.width-wrap {
+	max-width: 1200px;
+	min-width: 1200px;
+}
+
 .ie-bg {
 	display: block;
 	position: absolute;
