--- a/app-dev/styles/pages/index.css
+++ b/app-dev/styles/pages/index.css
@@ -403,8 +403,8 @@
 				margin: 0;
 				margin-right: 10px;
 				color: #999;
-				font-size: 13.9px;
-				vertical-align: middle;
+				font-size: 14.5px;
+				vertical-align: top;
 			}
 
 			#credit-details-pane .content-panel h5 {
@@ -451,9 +451,12 @@
 	}
 
 	.promotion-cards-group {
+		position: relative;
+		width: 100%;
 	}
 
 	.promotion-card {
+		box-sizing: border-box;
 		margin: 30px auto;
 		background-color: white;
 	}
@@ -461,7 +464,6 @@
 	.promotion-card .content {
 		position: relative;
 		box-sizing: border-box;
-		width: 100%;
 		height: 346px;
 		overflow: hidden;
 		margin: 0;
@@ -547,7 +549,7 @@
 		}
 
 		.promotion-card .splash .splash-image {
-			animation: promotion-card-zoom-out 1.5s ease forwards;
+			animation: promotion-card-zoom-out 2.1s ease forwards;
 		}
 
 		.promotion-card:hover .splash .splash-image {
